<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatApplication</string>
    <string name="button_text">Send</string>
    <string name="textView_text">New Text</string>
    <string name="message_hint">Enter your message</string>
    <string name="chat_hint">Введите сообщение чтобы начать чатиться :)</string>

    <string name="about_title">About</string>
    <string name="action_about">About program</string>
    <string name="about_info">Application by</string>
    <string name="team_label">WinterBall team</string>
    <string name="about_benz">benzoback</string>
    <string name="about_pav">PavBox</string>

    <string name="settings_title">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="switchNightMode_text">Night mode</string>
    <string name="buttonChangeNick">Изменить</string>

    <string name="login_title">Login</string>
    <string name="buttonLogin_text">Войти</string>
    <string name="welcomeTextView_text">Добро пожаловать</string>
    <string name="loginHint_text">Enter your login here</string>
    <string name="about_email">https://github.com/WinterBall</string>
    <string name="settings_colors">Выберите цвет</string>
    <string name="settings_color">Цвет ника</string>
    <string name="buttonSettingsSave_text">Сохранить</string>
    <string name="nightMode_text">Night mode</string>
    <string name="textView_hint_text">click to change</string>

</resources>
