<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewAbout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/pinkhellokitty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_info"
        android:id="@+id/textViewAbout"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:lines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_benz"
        android:id="@+id/textViewAboutBenz"
        android:layout_toStartOf="@+id/textViewAbout"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textViewAbout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_pav"
        android:id="@+id/textViewAboutPav"
        android:layout_alignTop="@+id/textViewAboutBenz"
        android:layout_toRightOf="@+id/textViewAbout"
        android:layout_toEndOf="@+id/textViewAbout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/about_email"
        android:id="@+id/textViewEmail"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/team_label"
        android:id="@+id/textViewAboutTeam"
        android:layout_below="@+id/textViewAbout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>