<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeTextView_text"
        android:id="@+id/textViewWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/loginHint_text"
        android:singleLine="true"
        android:maxLength="11"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin_text"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editLogin"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginButtonClick" />
</RelativeLayout>