<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_color"
        android:id="@+id/textViewUserColor"
        android:layout_toStartOf="@+id/NickNameLabel"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textViewSwtich"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonColor"
        android:onClick="onColorSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/switchTheme"
        android:layout_alignStart="@+id/switchTheme"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NickNameLabel"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonChangeNick"
        android:id="@+id/button_NickChange"
        android:layout_marginTop="31dp"
        android:enabled="true"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/NickNameLabel"
        android:onClick="onClick_ChangeNick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_NewNick"
        android:hint="@string/loginHint_text"
        android:singleLine="true"
        android:maxLength="11"
        android:gravity="center"
        android:enabled="true"
        android:editable="true"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSettingsSave_text"
        android:id="@+id/buttonSaveAll"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveAllButton" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchTheme"
        android:checked="false"
        android:onClick="onClickSwitchTheme"
        android:singleLine="true"

        android:layout_marginTop="100dp"
        android:layout_alignRight="@+id/buttonSaveAll"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nightMode_text"
        android:id="@+id/textViewSwtich"
        android:layout_alignBottom="@+id/switchTheme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
